[package]
name = "closures"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.89"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3.66"
features = [
	'Document',
	'Element',
	'HtmlElement',
	'Node',
	'Window',
	'console',
	'CssStyleDeclaration',
]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "s"
